--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "pachca-api",
   "private": true,
   "packageManager": "bun@1.3.4",
-  "workspaces": ["apps/*", "packages/*"],
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "devDependencies": {
     "turbo": "^2.7.6"
   }
