--- a/.github/workflows/gitlab.yml
+++ b/.github/workflows/gitlab.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to GitLab
         run: |
           git remote add gitlab https://maximov:${{ secrets.GITLAB_TOKEN }}@gitlab.primaverahq.com/mp/docs.git
-          git push gitlab main
+          git push --force-with-lease gitlab main:main
