feat: add initial configuration and SDK setup files for multiple languages

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "workspaces": [
     "apps/*",
     "apps/*/*",
-    "packages/*",
-    "sdk/*"
+    "packages/*"
   ],
   "devDependencies": {
     "turbo": "^2.8.1"
