feat: add initial configuration and SDK setup files for multiple languages

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,12 @@ dist/
 # Turborepo
 .turbo/
 
-# Generated files
+# Generated
 packages/spec/openapi.yaml
+
+# Swift
+.build/
+Package.resolved
 
 # Debug
 npm-debug.log*
