chore: настроена публикация SDK в npm и PyPI через OIDC

--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pachca/typescript",
+  "name": "@pachca/sdk",
   "version": "1.0.0",
   "type": "module",
   "main": "dist/index.js",
@@ -11,6 +11,15 @@
     }
   },
   "files": ["dist", "generated/src"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pachca/openapi.git",
+    "directory": "sdk/typescript"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
+  },
   "scripts": {
     "setup": "true",
     "generate": "openapi-typescript ../../../packages/spec/openapi.yaml -o generated/src/schema.d.ts",
