feat: unify method badges and add endpoint links with badges
- Match method badge style (rounded-full, 10px) across all pages to sidebar
- Add EndpointLink component for inline method links with colored badges
- Override badge colors inside callout blocks to match callout theme
- Preserve HTTP method info in schema description links for badge rendering
- Fix double-processing of endpoint descriptions in method template

--- a/apps/docs/.prettierignore
+++ b/apps/docs/.prettierignore
@@ -23,3 +23,7 @@ packages/spec/openapi.yaml
 
 # TypeSpec files (Prettier doesn't understand them)
 *.tsp
+
+# MDX content files (Prettier strips indentation from template literals
+# that mix unindented and indented lines, e.g. HTTP headers + JSON body)
+content/
