feat: add Mermaid diagram support with interactive controls
Add comprehensive Mermaid diagram support to MDX content:
- Client-side rendering with dynamic import for optimization
- Automatic light/dark theme switching
- Interactive controls: zoom in/out (50% step), pan (drag), reset
- Smooth pinch-to-zoom (2% step) with Ctrl+scroll support
- Improved text readability with contrast stroke for alt/opt/loop labels
- Text selection disabled during diagram interaction

Update guides/forms.mdx with lifecycle diagram

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -25,6 +25,7 @@
     "gsap": "^3.13.0",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.469.0",
+    "mermaid": "^11.12.2",
     "next": "16.0.10",
     "next-mdx-remote": "^5.0.0",
     "react": "19.2.3",
