fix: fixed deploy

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -3,6 +3,8 @@ name: SDK
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
   workflow_dispatch:
 
 jobs:
@@ -33,13 +35,19 @@ jobs:
       - run: bun install
       - run: bun turbo run generate
 
+      - name: Copy Swift Package.swift to root
+        if: github.event_name == 'push'
+        run: cp sdk/swift/Package.swift Package.swift
+
       - name: Extract version
+        if: github.event_name == 'push'
         id: version
         run: |
           VERSION=$(grep -oP 'version:\s*"\K[^"]+' packages/spec/typespec.tsp)
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Commit
+        if: github.event_name == 'push'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -47,12 +55,17 @@ jobs:
           git diff --staged --quiet || git commit -m "chore: regenerate SDK v${{ steps.version.outputs.version }}"
 
       - name: Tag
-        run: git tag "v${{ steps.version.outputs.version }}"
+        if: github.event_name == 'push'
+        run: |
+          git tag "v${{ steps.version.outputs.version }}"
+          git tag "sdk/go/generated/v${{ steps.version.outputs.version }}"
 
       - name: Push
+        if: github.event_name == 'push'
         run: git push --follow-tags
 
   publish-npm:
+    if: github.event_name == 'push'
     needs: generate
     runs-on: ubuntu-latest
     permissions:
@@ -76,10 +89,9 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   publish-pypi:
+    if: github.event_name == 'push'
     needs: generate
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -87,9 +99,19 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-      - run: pip install build
+      - run: pip install build twine
       - run: python -m build
         working-directory: sdk/python/generated
-      - uses: pypa/gh-action-pypi-publish@release/v1
+      - run: twine upload sdk/python/generated/dist/*
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+
+  publish-jitpack:
+    if: github.event_name == 'push'
+    needs: generate
+    runs-on: ubuntu-latest
+    steps:
+      - uses: badasintended/autojitpack@v1
         with:
-          packages-dir: sdk/python/generated/dist/
+          version: v${{ needs.generate.outputs.version }}
