--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "setup": "true",
-    "generate": "openapi-typescript ../../../packages/spec/openapi.yaml -o generated/src/schema.d.ts",
+    "generate": "openapi-typescript ../../packages/spec/openapi.yaml -o generated/src/schema.d.ts",
     "build": "tsc"
   },
   "dependencies": {
