--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "packageManager": "bun@1.3.4",
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "apps/*/*",
+    "packages/*",
+    "sdk/*"
   ],
   "devDependencies": {
     "turbo": "^2.8.1"
