fix: пуш тегов и permissions для генерации

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   generate:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     outputs:
       version: ${{ steps.version.outputs.version }}
     steps:
@@ -60,7 +62,7 @@ jobs:
 
       - name: Push
         if: github.event_name == 'push'
-        run: git push --follow-tags
+        run: git push && git push --tags
 
   publish-npm:
     if: github.event_name == 'push'
