fix: npm ci -> npm install (нет package-lock в bun workspace)

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -79,7 +79,7 @@ jobs:
         with:
           node-version: 20
           registry-url: "https://registry.npmjs.org"
-      - run: npm ci
+      - run: npm install
         working-directory: sdk/typescript
       - run: npm run build
         working-directory: sdk/typescript
