--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -75,13 +75,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: v${{ needs.generate.outputs.version }}
+      - uses: oven-sh/setup-bun@v2
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: "https://registry.npmjs.org"
-      - run: npm install
-        working-directory: sdk/typescript
-      - run: npm run build
+      - run: bun install --frozen-lockfile
+      - run: bun run build
         working-directory: sdk/typescript
       - run: npm publish --provenance --access public
         working-directory: sdk/typescript
