feat: static generation for llms.txt, llms-full.txt, skill.md, and .md pages
Replace dynamic Next.js route handlers with a build-time script that
generates all markdown files into public/. Files are now committed and
visible to Context7 and other repo scanners.

--- a/apps/docs/.prettierignore
+++ b/apps/docs/.prettierignore
@@ -28,3 +28,7 @@ next-env.d.ts
 # MDX content files (Prettier strips indentation from template literals
 # that mix unindented and indented lines, e.g. HTTP headers + JSON body)
 content/
+
+# Generated markdown files (auto-generated from OpenAPI spec)
+public/**/*.md
+public/**/*.txt
