chore: gitignore generated docs (llms.txt, md pages)

--- a/.gitignore
+++ b/.gitignore
@@ -50,4 +50,5 @@ Thumbs.db
 # Generated docs (rebuilt during deploy)
 apps/docs/public/llms.txt
 apps/docs/public/llms-full.txt
+apps/docs/public/*.md
 apps/docs/public/**/*.md
