--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@ next-env.d.ts
 # OS
 .DS_Store
 Thumbs.db
+
+# Generated docs (rebuilt during deploy)
+apps/docs/public/llms.txt
+apps/docs/public/llms-full.txt
+apps/docs/public/**/*.md
