feat: add AI agents guide page, agent skills generator, Card component improvements
- Add AI agents guide (ai-agents.mdx) with scenarios, how-it-works steps, API methods, practical tips, resources, and integration instructions
- Add agent skills generator scripts (scripts/skills/)
- Make Card component support optional href (static cards) and optional icon
- Add ArrowUpRight indicator on link cards with hover animation
- Add new Lucide icons for scenario cards
- Untrack generated AGENTS.md (now in .gitignore)
- Update forms guide with mermaid lifecycle diagram
- Update llms.txt generator, README, turbo config

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,10 @@ apps/docs/public/llms.txt
 apps/docs/public/llms-full.txt
 apps/docs/public/*.md
 apps/docs/public/**/*.md
+apps/docs/public/.well-known/
+
+# Generated agent skills (rebuilt during deploy)
+.agents/skills/
+.claude/skills/
+.cursor/rules/
+AGENTS.md
