chore: stop tracking .claude/skills and .cursor in git
Agent-specific skill files are installed locally via `npx skills add`
and should not be committed to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,6 @@ next-env.d.ts
 .DS_Store
 Thumbs.db
 
-# Claude Code local settings
-.claude/settings.local.json
+# Agent-specific local skills (installed via `npx skills add`)
+.claude/skills/
+.cursor/
