chore: improve docs SEO, fix MDX-to-markdown conversion, update ai-agents guide
- Fix mdx-expander: add CardGroup/Card conversion, fix ImageCard regex for paths with slashes, strip JSX template literal wrappers from CodeBlock
- Merge "Как это работает" steps with API methods table in ai-agents guide
- Migrate robots.txt and sitemap.xml to static generation
- Add structured data and meta improvements to layout and pages
- Regenerate all markdown/llms files

--- a/apps/docs/app/manifest.json
+++ b/apps/docs/app/manifest.json
@@ -1,6 +1,9 @@
 {
-  "name": "dev.pachca",
+  "name": "Пачка для разработчиков",
   "short_name": "dev.pachca",
+  "description": "REST API мессенджера Пачка для управления сообщениями, чатами, пользователями и задачами.",
+  "start_url": "/",
+  "lang": "ru",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
