--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,7 @@
     "generate-llms": {
       "dependsOn": ["@pachca/spec#generate"],
       "inputs": ["scripts/generate-llms.ts", "scripts/skills/**", "lib/**", "content/**"],
-      "outputs": ["public/llms.txt", "public/llms-full.txt", "public/skill.md", "public/index.md", "public/guides/**", "public/**/*.md", "public/.well-known/**"],
+      "outputs": ["public/llms.txt", "public/llms-full.txt", "public/skill.md", "public/index.md", "public/guides/**", "public/**/*.md", "public/.well-known/**", "public/pachca.postman_collection.json"],
       "cache": true
     },
     "build": {
