feat: workflow catalog UI, skill fixes, title field removal
- Add AgentSkillsWorkflows accordion component with Radix UI
- Remove title field from SkillConfig (not required by Agent Skills spec)
- Fix accordion header not rendering as h3 (TOC interference)
- Fix chevron rotation with named group syntax
- Fix prose margin-bottom on ul/ol with !mb-0
- Add not-prose to accordion root to prevent typography styles
- Fix left border stripe not reaching bottom divider (pb-3 wrapper)
- Fix GET /tasks: remove non-existent status filter param, clarify client-side filtering
- Remove caps (КАЖДОГО, НЕ, ДО, ЛС) from workflow text
- Update GitHub issue template: free-form scenarios, drop structured fields
- Fix TypeScript errors: SkillConfig.title → name in mdx-expander, enum key cast in generate.ts

--- a/.github/ISSUE_TEMPLATE/workflow-suggestion.yml
+++ b/.github/ISSUE_TEMPLATE/workflow-suggestion.yml
@@ -1,35 +1,25 @@
-name: "Предложить workflow для AI-агента"
-description: Предложите новый сценарий использования API для Agent Skills
-title: "[Workflow] "
+name: "Предложить сценарий для AI-агента"
+description: Предложите один или несколько новых сценариев использования API для Agent Skills
+title: "[Сценарий] "
 labels: ["workflow", "enhancement"]
 body:
-  - type: input
-    id: skill
-    attributes:
-      label: Скилл
-      description: К какому скиллу относится workflow?
-      placeholder: "pachca-messages, pachca-chats, ..."
-    validations:
-      required: true
-  - type: input
-    id: title
-    attributes:
-      label: Название workflow
-      placeholder: "Отправить сообщение с упоминанием пользователя"
-    validations:
-      required: true
   - type: textarea
-    id: steps
+    id: scenarios
     attributes:
-      label: Шаги
-      description: Опишите последовательность API-вызовов
+      label: Сценарии
+      description: >
+        Опишите, каких сценариев вам не хватает. Можно в любом формате —
+        просто словами, списком шагов или с примерами API-вызовов.
       placeholder: |
+        Пример 1: хочу отправить сообщение с упоминанием пользователя
         1. GET /users?query=... — найти пользователя
         2. POST /messages с @mention в content
+
+        Пример 2: нужно массово добавить участников в канал по тегу
     validations:
       required: true
   - type: textarea
     id: usecase
     attributes:
       label: Зачем это нужно
-      description: Опишите задачу, которую решает этот workflow
+      description: Опишите задачу или контекст (необязательно)
