--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -33,7 +33,7 @@ jobs:
           java-version: 17
 
       - run: bun install
-      - run: bun turbo run generate
+      - run: npx turbo run generate
 
       - name: Copy Swift Package.swift to root
         if: github.event_name == 'push'
@@ -79,9 +79,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          registry-url: "https://registry.npmjs.org"
       - run: bun install --frozen-lockfile
-      - run: bun run build
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          registry-url: "https://registry.npmjs.org"
+      - run: npm run build
         working-directory: sdk/typescript
       - working-directory: sdk/typescript
         env:
